WEBSPARK-1143 - Fixed styling of Innovation's unreadable nav pills with dropdown menu items

--- a/profiles/openasu/themes/innovation/css/innovation-main.css
+++ b/profiles/openasu/themes/innovation/css/innovation-main.css
@@ -693,6 +693,15 @@ h4.ui-accordion-header.ui-state-default:last-of-type {
 #top-content #tabs .nav-pills > li.active > a:focus {
   background-color: #8C1D40;
 }
+  /* dropdown items from nav pills */
+#top-content #tabs .nav-pills li.dropdown > ul.dropdown-menu a {
+  background-color: rgba(0,0,0,0);
+  border-bottom: none;
+}
+#top-content #tabs .nav-pills li.dropdown > ul.dropdown-menu a:hover {
+  background-color: #e9e9e9;
+  color: #000;
+}
 
 /* IPE */
 #panels-ipe-control-container a {
